mule-user-guide/v/3.7/microsoft-service-bus-connector.adoc
=  Microsoft Service Bus连接器
:keywords: anypoint studio, connector, endpoint, microsoft, azure, windows service bus, windows

*_Select_*

*Latest version: 1.3.1*

ServiceBus连接器使消息与场内的Windows Service Bus和云上的Azure服务总线集成。该连接器通过AMQP 1.0支持与队列，主题和事件集线器的通信。另外，使用内置的管理API可以动态地发现和配置服务总线对象。

*Release Notes:* link:/release-notes/microsoft-service-bus-connector-release-notes[Microsoft Service Bus连接器发行说明]

该连接器当前支持以下操作：

* 发送到支持AMQP消息属性和标题的队列，主题和事件中心，包括自定义属性。
* 异步接收队列和主题
*  Rest Management API
队列的**  CRUD
主题的**  CRUD
订阅的**  CRUD
规则的**  CRUD

该连接器支持以下Service Bus版本：

*  Microsoft Azure服务总线（云）
*  Microsoft Windows Service Bus（本地）

== 先决条件

本文档假定您熟悉Mule， link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint™连接器]和 link:/anypoint-studio/v/5/index[Anypoint Studio Essentials]。为提高您对Studio的熟悉度，请考虑完成一个或多个 link:/anypoint-studio/v/5/basic-studio-tutorial[Anypoint Studio教程]。此外，本页假定您对 link:/mule-user-guide/v/3.7/mule-concepts[骡流]和 link:/mule-user-guide/v/3.7/global-elements[骡全球元素]有基本的了解。

== 安装服务总线连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 在Mule流中使用连接器

要在Mule应用程序中使用Service Bus连接器，请按照以下步骤操作。

=== 创建一个新的Mule项目

要开始构建此应用程序，请启动Anypoint Studio并创建一个新项目。

. 选择*File*> *New*> *Mule Project*。
. 在New Mule Project配置菜单中，为该项目提供一个名称：`service_bus_demo`。
. 点击*Finish*。

一个新的项目打开时用一个空白画布来构建流程，以及带有Message Processors的调色板在右侧。

=== 创建一个Mule流

[NOTE]
下面的部分是使用一个演示Mule流来描述的，该流程被构建为列出服务总线中的所有现有队列。

image:ms-sbus-demo-flow.png[服务总线演示流程]

. 将HTTP连接器拖到画布中，然后单击以打开属性编辑器控制台。
. 点击绿色加号：+
 +
image:DotNetHTTP0.png[HTTP连接器配置参数]
+
. 按如下方式配置HTTP连接器：+

..  *Host*：`localhost`
..  *Port*：`8081`
..  *Path*：`servicebus`
+
image:DotNetHTTP1.png[服务总线连接器配置]
+
. 搜索将Microsoft Service Bus连接器拖到画布中，然后单击以打开属性编辑器控制台。
. 点击*Connection Configuration*绿色加号（`+`）符号按钮。
+
image:ServiceBusGeneral.png[服务总线连接器配置]
+
. 单击服务总线类型：+
+
image:ServiceBusGlobalType.png[服务总线连接器全局类型]
+
.   Azure服务总线：
+
image:ServiceBusAzure.png[Azure服务总线配置]
+

[%header%autowidth.spread]
|===
| {字段{1}}说明
| *Name*  |输入全局元素的名称。
| *Service Namespace*  |输入服务名称空间的名称以解决应用程序中的服务总线资源问题。
| *Shared Access Key Name*  |输入在命名空间中配置的访问密钥的名称。除非您在启动时禁用连接测试，否则在较低级别创建的任何访问密钥（即主题级共享密钥）都不适用于此选项。请参阅下面的*Skip Connectivity Test*选项。
| *Shared Access Key*  |输入256位主键。
| *Skip Connectivity Test*  |如果您对Azure服务总线资源的访问权限有限，并且您希望跳过启动时执行的连接测试（因为这在名称空间的根级别工作）需要将此设置设置为true。例如，您可能需要接收或发送特定队列或主题，并且您的*Shared Access Key*具有安全策略，只允许在特定目标资源上执行有限的一组操作。
| *Enable DataSense*  |如果您打算将Microsoft Service Bus连接器与 link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[Anypoint DataMapper]结合使用来映射和转换数据，则可以使用Anypoint Studio的
link:/anypoint-studio/v/6/datasense[DataSense]功能。您可以启用DataSense作为配置全局元素的一部分。
|===
+
.  Windows服务总线：
+
image:ServiceBusWindowsGen.png[Windows服务总线配置]
+

[%header%autowidth.spread]
|===
| {字段{1}}说明
| *Name*  |输入全局元素的名称。
| *Service Namespace*  |输入服务名称空间的名称以解决应用程序中的服务总线资源问题。
| *Username*  |输入用户进行身份验证。
| *Password*  |输入用户的密码。
| *Fully* *Qualified Domain Name*  |输入Windows Service Bus服务器的完全限定域名
| *Port*  |输入服务器端口号。
| *Disable SSL Certificate Validation*  |如果您使用的是自签名SSL证书，请选中此复选框。
| *Skip connectivity test*  |如果您对Windows Service Bus资源的访问权限有限，并且想要跳过启动时执行的连接测试，则需要将此设置设置为true。
| *Enable DataSense*  |如果您打算将Microsoft Service Bus连接器与 link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[Anypoint DataMapper]结合使用来映射和转换数据，则可以使用Anypoint Studio的
link:/anypoint-studio/v/6/datasense[DataSense]功能。您可以启用DataSense作为配置全局元素的一部分。
|===
+
. 配置所需的参数，如下所示：
+
image:service-bus-config.png[服务总线配置]
+
[%header%autowidth.spread]
|===
| {参数{1}}值
| *Display Name*  | Microsoft Service Bus
| *Connector Configuration*  | Microsoft_Service_Bus_Azure_Service_Bus（请参阅步骤2了解如何创建全局元素）
| *Operation*  |队列列表
|===
. 将对象拖放到Microsoft Service Bus连接器旁边的JSON转换器。

有关说明更高级方案的代码示例，请参阅 link:_attachments/service-bus-connector-samples.zip[service-bus-connector-samples.zip]

=== 运行应用程序

您现在已准备好运行该项目！首先，您可以测试从Studio运行应用程序：

. 在Package Explorer窗格中右键单击您的应用程序。
. 选择*Run As*> *Mule Application*：
. 启动浏览器并转至http：// localhost：8081 / servicebus
. 现有队列列表应以JSON格式返回（结果因您的服务总线实例而异）。
+

[source, code, linenums]
----
[{"id":"https://mulens.servicebus.windows.net/testqueue","title":"testqueue","published":1413313926000,"updated":1415808103000,
"author":"../testqueue","link":"mulens","queueDescription":{"lockDuration":"PT1M","maxSizeInMegabytes":1024,"sizeInBytes":253,"messageCount":1,"requiresDuplicateDetection":
false,"requiresSession":false,"deadLetteringOnMessageExpiration":false,"enableBatchedOperations":true,"defaultMessageTimeToLive":
"P10675199DT2H48M5.4775807S","duplicateDetectionHistoryTimeWindow":"PT10M","maxDeliveryCount":10}}]
----
== 同步和异步行为

连接器的行为有所不同，具体取决于使用的流处理策略。

- 对于同步方案，连接器只有在流程成功完成时才会确认消息。
如果发生错误，消息不会被确认，并且会一直消耗直到成功。
- 对于异步场景，消息不会由连接器源自动确认，因此无论流失败还是成功，都将重新使用该消息。
为了确认消息，必须在流程中使用*Acknowledge Message*处理器。该处理器接收*AmpqMessage*作为输入并进行确认。
因此，需要承认，从源接收的*AmpqMessage*必须作为输入提供给"Acknowledge Message"处理器进行确认。
- 以下是使用*Acknowledge Message*处理器的异步流程示例。

[source, xml, linenums]
----
<flow name="example-servicebusFlow" processingStrategy="queued-asynchronous">
        <microsoftservicebus:topic-receive config-ref="Microsoft_Service_Bus__Azure_Service_Bus" sourceTopic="test_topic" subscription="HighPriority" doc:name="Microsoft Service Bus (Streaming)"/>
        <set-variable variableName="test" value="#[payload]" doc:name="Variable"/>
        <microsoftservicebus:acknowledge-message config-ref="Microsoft_Service_Bus__Azure_Service_Bus" amqpMessage-ref="#[flowVars.test]" doc:name="Ack Processor"/>
</flow>
----

在此示例中，*AmqpMessage*保存在名为"test"的流变量中，该变量作为输入传递给*Acknowledge Message*处理器。


== 服务总线身份验证

为了通过服务总线连接器发送和接收消息，认证通过AMQP执行。

对于REST管理API，身份验证方案因Microsoft Service Bus版本而异。在本地运行的Windows Service Bus使用OAuth，并且在云上运行的Azure Service Bus使用共享访问密钥令牌。

[NOTE]
Windows Service Bus使用自签名SSL证书通过AMQP / HTTPS保护通信。如果此证书未在运行ESB的框中本地导入，则连接器将不会运行，除非启用了忽略SSL警告检查。

要启用SSL检查，必须按照以下步骤导入证书：

. 使用powershell cmdlet link:https://msdn.microsoft.com/library/azure/jj248762%28v=azure.10%29.aspx[GET-SBAutoGeneratedCA]在运行Windows Service Bus的框中本地下载证书。出于本教程的目的，假定证书文件被导出到_％temp％\ AutoGeneratedCA.cer_。
. 转到_％programfiles％\ Java \ jre7_。验证_bin \ keytool.exe_工具是否存在，并且存在_lib \ security \ cacerts_。请注意，您必须以管理员身份运行才能使用Keytool.exe执行证书导入。否则，会生成访问被拒绝错误。
. 输入以下命令：*bin\keytool.exe –list –keystore lib\security\cacerts*
. 通过运行以下命令导入自动生成的Service Bus证书：*bin\keytool.exe –importcert –alias AppServerGeneratedSBCA –file %temp%\AutoGeneratedCA.cer –keystore lib\security\cacerts –v*
. 系统会提示您输入密码（默认为“changeit”）。如果您不知道密码，则无法执行导入。当工具询问您是否信任证书时，请输入*Y*（是）。

=== 基于SAS的身份验证

除了需要用户名和密码的连接方案之外，连接器还提供了一种连接，其中基于SAS的身份验证（仅适用于Azure），允许您为服务总线服务设置身份验证令牌，而无需输入用户名和密码。

由于SAS令牌架构是基于URI的（也就是说，您可以根据URI为您的资源分配不同的授权访问权限），因此该连接支持多种方式提供所需的身份验证令牌。最简单最简单的情况是，当您有一个配置文件授权通过使用特定的根URI（您的服务公开的基本端点）来访问您的所有资源时。如果您需要在不同的资源上提供不同的访问令牌，那么您可以使用一个设置，允许您根据连接器在运行时需要访问的资源来配置它们的列表。

最后但并非最不重要的是，扩展上述机制以提供身份验证令牌，还有另一种机制允许您实现自定义令牌提供程序，以便在需要时允许连接器请求安全令牌。您有责任解决每个请求，并在每次连接器请求时返回一个新的令牌。由于令牌在其中具有到期时间，因此该机制允许连接器在令牌过期后用目标资源重新进行认证（这对于前面描述的在流程之前配置时固定令牌的机制是不允许的运行）。

以下是`Shared Access Signature`连接的可用设置：

*Service Namespace*：订阅中的Azure服务总线服务的名称空间。

*Shared Access Signature* :(可选）当您只设置一个安全配置文件来访问所有服务资源时，唯一的安全令牌。在这种情况下，当令牌过期时，连接器无法自动重新连接，您需要停止运行流程以便使用新令牌更新此配置设置。

在高级部分中，您可以找到：

*SAS Tokens List* :(可选）连接器在每个安全配置文件的安全配置文件不同时需要访问不同URI的安全性令牌列表。在这种情况下，当任何令牌过期时，连接器无法重新连接到与该令牌链接的URI，您将需要停止运行流程以便使用一组新的令牌更新此配置设置。

*SAS Tokens Provider* :(可选）实现`org.mule.modules.microsoftservicebus.connection.providers.SharedAccessSignatureProvider`接口的Spring bean引用。如果您在此处设置了令牌提供程序的实例，则您有责任为连接器需要访问的每个URI（根据您的安全配置文件）提供新的令牌。在这种情况下，每次令牌过期时，连接器将请求一个新的令牌，并由您的实现提供，并且将无缝地重新连接到目标URI。为了将您自己的实现作为Spring bean提供引用，请参阅以下 link:/mule-user-guide/v/3.8/using-spring-beans-as-flow-components[文件]。

*Max Connections* :(可选）要保留在池中以便生产者重新使用的最大连接数。如果设置为"-1"，则每次都会创建一个新连接。

注：必须至少提供一个上面显示的可选设置。

在所有情况下，您应该提供的令牌格式为`string`，必须符合以下模式：

[source]
----
SharedAccessSignature sr=[resource_uri]&sig=[signature]&se=[ttl]&skn=[profile]
----

取决于您将在目标资源上执行的操作，`sr`参数值可以以`https`或`amqps`协议开头。

例如：
[source]
----
SharedAccessSignature sr=amqps%3a%2f%2fmynamespace.servicebus.windows.net%2fMyQueue&sig=pSrfJn5uRTiepgOTjBpjcf2gw%2bG34S1MYdCfkQkTC8A%3d&se=101&skn=OperationalPolicyKey`
----

==== 性能注意事项

使用SAS令牌对Azure Service Bus进行身份验证所需的基于声明的安全机制涉及与特殊节点交换消息。作为令牌的连接器性能的最新影响根据请求进行交换，以便使用目标令牌（与正在访问的资源相关）实现连接安全设置。这已经从版本1.2开始进行了优化，以尽可能降低性能。无论如何，如果您的方案需要发送高吞吐量的多个消息，建议使用需要设置用户名和密码的连接策略。这是通过连接器向Azure Service Bus进行身份验证的简单方法，但要达到更高的吞吐量，但需要为您正在使用的`shared access key name`编写密码。

注：如前所述，如果您在使用SAS策略时遇到性能问题，我们建议您更新至1.2或更高版本。优化机制对接收和发送操作的性能影响较小，因为AMQP容器和高速缓存（分别）会保持连接处于活动状态，并且只有在设置连接和/或令牌过期的情况下才会发生令牌交换消息。

==== 使用受限访问策略

在限制访问资源的情况下，只有在资源级别拥有权限的安全策略时，连接器在启动时无法执行`connectivity test`，因为它将目标设置为可能被禁止的命名空间的根级别由于定制的政策适用于`shared access key`。对于这些场景，您需要跳过连接测试，并使用可用于此目的的配置选项，否则connetor的启动将失败。



== 连接器操作

===  AMQP操作

==== 发送到队列，主题或事件中心

[%header,cols="20,80"]
|===
|属性 |用法
| *Destination Queue, Topic, Event Hub*  |消息目标的名称
| *Body*  |消息的内容
| *Header*  | AMQP 1.0标准中定义的支持的Header字段
| *Properties*  | AMQP 1.0标准中定义的受支持的Amqp属性
|===

这些操作支持以下消息内容类型：字符串，流，映射，字节数组或实现可序列化接口的任何对象。否则会引发异常。

AMQP 1.0标准中定义的Amqp Header字段可以在处理器中指定：

*  *Durable*：指定耐久性要求
*  *Priority*：相对消息优先级
*  *Ttl*：住在ms的时间
*  *deliveryCount*：之前不成功的投递尝试次数

标准中支持以下Amqp属性并可以指定：

*  *messageId*：应用程序消息标识符
*  *contentType*：MIME内容类型
*  *correlationId*：应用程序关联标识符
*  *to*：消息所指向的节点的地址
*  *replyTo*：要发送回复的节点
*  *userId*：创建用户标识
*  *subject*：邮件的主题

*Custom Properties:*

其他自定义属性可以通过Mule消息属性传递给处理器。为此，Mule Message的属性名称必须以“amqp。”前缀开头。

==== 从队列/主题接收

[%header%autowidth.spread]
|===
|属性 |用法
| *Source Topic, Queue*  |从中检索消息的源的名称
| *Subscription*  |在从主题接收消息的情况下，必须指定从中检索消息的订阅名称
|===

要使用这些操作，连接器必须是入站端点。 _Receive_操作使用异步侦听器来接收消息。收到消息后，AMQP消息的自定义属性将转换为带有“amqp。”前缀的Mule消息属性，并将消息内容作为有效负载传递。

== 管理API

=== 队列

====  ServiceBusQueue对象

队列由包含以下字段的对象表示：

*  *Id*（字符串）
*  *Title*（字符串）
*  *Published*（日期）
*  *Updated*（日期）
*  *Author*（字符串）
*  *Link*（字符串）
*  *Queue Description*（ServiceBusQueueDescription）

====  ServiceBusQueueDescription对象

*  *Lock Duration*（字符串）：确定消息应被锁定以供接收者处理的时间量（以秒为单位）。在此期间之后，该消息被解锁并可供下一个接收器使用。只能在创建队列时设置。
有效值：范围：0  -  5分钟。 0表示消息未被锁定。
格式：PTx3Mx4S，其中x1是天数，x2是小时数，x3是分钟数，x4是秒数（例如：PT5M（5分钟），PT1M30S（1分30秒））。
*  *Max Size In Megabytes*（长）：以兆字节为单位指定最大队列大小。任何尝试排队导致队列超过此值的消息都会失败。有效值为：1024,2048,3072,4096,5120。
*  *Size In Bytes*（Long）：反映队列中消息当前占用队列配额的实际字节数。
*  *Message Count*（长）：显示当前队列中的消息数量。
*  *Requires Duplicate Detection*（布尔）：仅在创建队列时可设置。
*  *Requires Session*（布尔）：仅在创建队列时可设置。如果将此设置为true，则该队列是会话感知的，并且仅支持SessionReceiver。通过REST不支持会话感知队列。
*  *Dead Lettering On Message Expiration*（布尔）：该字段控制服务总线如何处理TTL过期的消息。如果启用并且消息过期，则Service Bus将消息从队列移入队列的死信子队列。如果禁用，则消息将从队列中永久删除。只能在创建队列时设置。
*  *Enable Batched Operations*（布尔型）：在对特定队列执行操作时启用或禁用服务端批处理行为。启用后，Service Bus会将多个操作收集/批处理到后端，从而提高连接效率。如果您想要较低的操作延迟，可以禁用此功能。
*  *Default Message Time To Live*（字符串）：根据是否启用DeadLettering，如果消息已存储在队列中的时间超过指定的时间，则消息将自动移至DeadLetterQueue或被删除。当且仅当消息TTL小于队列中设置的TTL时，该值将被消息上指定的TTL覆盖。创建队列后，此值不可变。
*  *Format*：Px1DTx2Hx3Mx4S，其中x1天数，x2小时数，x3分钟数，x4秒数（例如：PT10M（10分钟），P1DT2H（1天，2小时）
*  *Duplicate Detection History Time Window*（字符串）：指定服务总线检测到消息重复+的时间跨度
有效值：范围：1秒 -  7天。 +
格式：Px1DTx2Hx3Mx4S，其中x1天数，x2小时数，x3分钟数，x4秒数（例如：PT10M（10分钟），P1DT2H（1天，2小时））。
*  *Max Delivery Count*（整数）：服务总线尝试传递消息被丢弃前的最大次数。

==== 创建队列

[%header%autowidth.spread]
|===
|属性 |用法
| *Queue Path*  |创建的队列的名称
| *Queue Description*  |包含创建的队列属性的期望值的ServiceBusQueueDescription对象
|===

*Output*：包含创建的队列表示的ServiceBusQueue对象

==== 获取队列

[%header%autowidth.spread]
|===
|属性 |用法
| *Queue Path*  |检索到的队列的名称; DataSense在此字段中启用
|===

*Output:*包含所检索队列表示的ServiceBusQueue对象

==== 列出队列：

*Output:*包含每个现有队列的ServiceBusQueue对象列表

==== 更新队列：

[%header%autowidth.spread]
|===
|属性 |用法
| *Queue Path*  | 更新队列的名称; DataSense在此字段中启用
| *Queue Description*  |一个ServiceBusQueueDescription对象，包含更新的队列属性的所需值
|===

*Output*：包含已更新队列表示的ServiceBusQueue对象

==== 删除队列

[%header%autowidth.spread]
|=====
|属性 |用法
| *Queue Path*  |删除队列的名称; DataSense在此字段中启用
|=====

== 主题

===  ServiceBusTopic对象

该主题由包含以下字段的对象表示：

*  *Id*（字符串）
*  *Title*（字符串）
*  *Published*（日期）
*  *Updated*（日期）
*  *Author*（字符串）
*  *Link*（字符串）
*  *Topic Description*（ServiceBusTopicDescription）

===  ServiceBusTopicDescription对象

*  *Max Size In Megabytes*（长）：以兆字节为单位指定最大队列大小。任何尝试排队导致队列超过此值的消息都会失败。有效值为：1024,2048,3072,4096,5120。
*  *Size In Bytes*（Long）：反映队列中消息当前占用队列配额的实际字节数。
*  *Requires Duplicate Detection*（布尔）：如果启用，主题将在DuplicateDetectionHistoryTimeWindow属性指定的时间范围内检测重复消息。只能在主题创建时设置。
*  *Enable Batched Operations*（布尔型）：在对特定队列执行操作时启用或禁用服务端批处理行为。启用后，Service Bus会将多个操作收集/批处理到后端，以提高连接效率。如果您想要较低的操作延迟，可以禁用此功能。
*  *Default Message Time To Live*（字符串）：确定消息在关联订阅中的存在时间。订阅从主题继承了TTL，除非它们是使用较小的TTL明确创建的。根据是否启用死文字，TTL过期的消息将被移至订阅的关联DeadLtterQueue或被永久删除。
*  *Format*：Px1DTx2Hx3Mx4S，其中x1是天数，x2是小时数，x3是分钟数，x4是秒数（例如：PT10M（10分钟），P1DT2H（1天， 2小时））。
*  *Duplicate Detection History Time Window*（字符串）：指定服务总线检测到消息重复+的时间跨度
 有效值：范围：1秒 -  7天。 +
 格式：Px1DTx2Hx3Mx4S，其中x1是天数，x2是小时数，x3是分钟数，x4是秒数（例如：PT10M（10分钟），P1DT2H（1天，2小时） ）。

=== 创建主题

[%header%autowidth.spread]
|===
|属性 |用法
| *Topic Path*  |检索到的主题的名称
| *Topic Description*  |一个ServiceBusTopicDescription对象，包含所创建主题的属性的所需值
|===

*Output*：包含所创建主题的表示的ServiceBusTopic对象

=== 获取主题

[%header%autowidth.spread]
|===
| {参数{1}}用法
|主题路径 |检索到的主题的名称; DataSense在此字段中启用
|===

*Output*：一个包含检索主题表示的ServiceBusTopic对象

=== 列出主题

*Output*：包含每个现有主题的ServiceBusTopic对象列表

=== 更新主题

[%header%autowidth.spread]
|===
|属性 |用法
|主题路径 |更新的主题的名称; DataSense在此字段中启用
|主题描述 |一个ServiceBusTopicDescription对象，包含所更新主题的所需属性值
|===

*Output*：包含更新主题表示的ServiceBusTopic对象

=== 删除主题

[%header%autowidth.spread]
|===
|属性 |用法
|主题路径 |要删除的主题的名称; DataSense在此字段中启用
|===

=== 订阅

====  ServiceBusSubscription对象

订阅由包含以下字段的对象表示：

*  *Id*（字符串）
*  *Title*（字符串）
*  *Published*（日期）
*  *Updated*（日期）
*  *Link*（字符串）
*  *Subscription Description*（ServiceBusSubscriptionDescription）

====  ServiceBusSubscriptionDescription对象

*  *Lock Duration*（字符串）：默认锁持续时间适用于未定义锁持续时间的订阅。您只能在订阅创建时设置此属性。 +
有效值：范围：0  -  5分钟。 0表示消息未被锁定。 +
格式：PTx3Mx4S，其中x1天数，x2小时数，x3分钟数，x4秒数（例如：PT5M（5分钟），PT1M30S（1分30秒））。
*  *Message Count*（长）：报告监控系统报告的队列中的消息数量。
*  *Requires Session*（布尔）：您只能在订阅创建时设置此属性。如果设置为true，则预订会话感知，并且只支持SessionReceiver。通过REST不支持会话感知订阅。
*  *Dead Lettering On Message Expiration*（布尔型）：该字段控制Service Bus如何处理TTL过期的消息。如果启用并且消息过期，则Service Bus将消息从队列移入订阅的死信子队列。如果禁用，则从预订的主队列中永久删除消息。只能在订阅创建时设置。
*  *Dead Lettering On Filter Evaluation Exceptions*（布尔型）：确定Service Bus在订阅的过滤器评估期间如何处理导致异常的消息。如果该值设置为true，则导致异常的消息将移至预订的死信队列。否则，它被丢弃。默认情况下，此参数设置为true，使您能够调查异常的原因。它可能发生在格式错误的消息中，或者在过滤器中对消息的形式进行了一些不正确的假设。只能在订阅创建时设置。
*  *Enable Batched Operations*（布尔型）：在对特定队列执行操作时启用或禁用服务端批处理行为。启用后，Service Bus将收集多个操作并将其批量分配到后端以提高连接效率。如果您想要较低的操作延迟，那么您可以禁用此功能。
*  *Default Message Time To Live*（字符串）：确定消息在订阅中的存在时间。根据是否启用死信，生命周期（TTL）过期的消息将移至预订的关联DeadLetterQueue或永久删除。如果主题指定的TTL小于订阅，则应用主题TTL。 +
格式：Px1DTx2Hx3Mx4S，其中x1天数，x2小时数，x3分钟数，x4秒数（例如：PT10M（10分钟），P1DT2H（1天，2小时）
*  *Max Delivery Count*（整数）：服务总线尝试传递消息的最大次数，该消息在该消息死信或丢弃之前。

==== 创建订阅

[%header%autowidth.spread]
|===
|属性 |用法
| *Topic Path*  |创建订阅的主题的名称
| *Subscription Path*  |创建的订阅的名称
| *Subscription Description*  |一个ServiceBusSubscriptionDescription对象，包含创建的订阅的属性的所需值
|===

*Output*：包含已创建订阅表示的ServiceBusSubscription对象

==== 获取订阅

[%header%autowidth.spread]
|===
|属性 |用法
| *Topic Path*  |检索订阅的主题的名称; DataSense在此字段中启用
| *Subscription Path*  |检索到的订阅的名称
|===

*Output*：一个ServiceBusSubscription对象，包含检索到的订阅的表示

==== 列出订阅

[%header%autowidth.spread]
|===
|属性 |用法
| *Topic Path*  |订阅被检索的主题的名称; DataSense在此字段中启用
|===

*Output*：包含主题中每个现有订阅的ServiceBusSubscription对象列表

==== 更新订阅

[%header%autowidth.spread]
|===
|属性 |用法
| *Topic Path*  |订阅更新主题的名称; DataSense在此字段中启用
| *Subscription Path*  |更新的订阅的名称
| *Subscription Description*  |包含要更新的预订属性的所需值的ServiceBusSubscriptionDescription对象
|===

*Output*：包含已更新订阅表示的ServiceBusSubscription对象

=== 规则

====  ServiceBusRule对象

它代表处理消息的规则。服务总线将消息与由其Filter属性表示的过滤器进行匹配，并根据与过滤器匹配的消息执行由Action属性表示的操作。

*  *Id*（字符串）
*  *Title*（字符串）
*  *Published*（日期）
*  *Updated*（日期）
*  *Link*（字符串）
*  *Rule Description*（ServiceBusRuleDescription）

====  ServiceBusRuleDescription对象

*  *Filter*（ServiceBusRuleFilter）：如果为空，则不应用过滤器
*  *Action*（ServiceBusRuleAction）：如果为空，则不执行任何操作

====  ServiceBusRuleFilter对象

*Sql Expression*（字符串）：用于过滤消息的sql表达式。您必须在筛选器类型中选择SqlFilter才能应用它。例如：MyProperty ='value'。

*Correlation Id*（字符串）：在过滤器是CorrelationFilter的情况下匹配的id

*Type*（ServiceBusRuleFilterType）：有效值为：

*  SqlFilter：一种由SQL表达式表示的Filter
*  TrueFilter / FalseFilter：返回true或false的方便快捷方式;他们是一种SqlFilter
*  CorrelationFilter：与BrokeredMessage的CorrelationId属性匹配的Filter类型

====  ServiceBusRuleAction对象

*  *Sql Expression*（字符串）：要执行的动作的sql表达式。示例：SET MyProperty ='ABC'
*  *Type*（ServiceBusRuleActionType）：有效值为：
**  SqlFilterAction：一种由SQL表达式表示的FilterAction
**  EmptyRuleAction：表示空操作的FilterAction类型

==== 创建规则

[%header%autowidth.spread]
|=====
|属性 |用法
| *Topic Path*  |订阅已创建规则的主题的名称
| *Subscription Path*  |创建规则的订阅的名称
| *Rule* *Path*  |创建的规则的名称
| *Rule Description*  |一个ServiceBusRuleDescription对象，包含创建的规则的属性的所需值
|=====

*Output*：包含创建规则表示的ServiceBusRule对象

==== 获取规则

[%header%autowidth.spread]
|====
|属性 |用法
| *Topic Path*  |具有从检索规则的位置订阅的主题的名称
| *Subscription Path*  |检索规则的订阅名称
| *Rule* *Path*  |检索到的规则的名称
|====

*Output*：包含检索规则表示的ServiceBusRule对象

==== 列表规则

[%header%autowidth.spread]
|====
|属性 |用法
| *Topic Path*  |具有从检索规则的位置订阅的主题的名称
| *Subscription Path*  |需要检索规则的订阅名称
|====

*Output*：包含指定订阅和主题中每个现有规则的ServiceBusRule对象列表

==== 更新规则

[%header%autowidth.spread]
|=====
|属性 |用法
| *Topic Path*  |具有更新规则的订阅的主题的名称
| *Subscription Path*  |更新规则的订阅名称
| *Rule* *Path*  |更新的规则的名称
| *Rule Description*  |一个ServiceBusRuleDescription对象，包含更新规则的属性的所需值
|=====

*Output*：包含创建规则表示的ServiceBusRule对象

==== 删除规则

[%header%autowidth.spread]
|===
|属性 |用法
| *Topic Path*  |具有删除规则的订阅的主题的名称
| *Subscription Path*  |规则被删除的订阅的名称
| *Rule* *Path*  |被删除的规则的名称
|===

== 另请参阅

* 详细了解 link:/mule-user-guide/v/3.7/microsoft-service-bus-connector-faq[Microsoft Service Bus连接器常见问题]中的Microsoft Service Bus连接器。
* 有关说明更高级方案的代码示例，请参阅 link:_attachments/service-bus-connector-samples.zip[service-bus-connector-samples.zip]。
* 访问 link:http://forums.mulesoft.com[MuleSoft的论坛]提出问题并从Mule广泛的用户群体获得帮助。
*  https://support.mulesoft.com [联系MuleSoft支持]。
